# slurm

./: '  .clang-format  .cray-obs-config.xml  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  BUILD.NOTES  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  DISCLAIMER  Dockerfile.ubunutu  INSTALL  LICENSE.OpenSSL  META  Make-rpm.mk  Makefile.am  Makefile.in  NEWS  README  README.md  README.rst  RELEASE_NOTES  RELEASE_NOTES.md  RELEASE_NOTES_LLNL  SECURITY.md  Support  TAGS  acinclude.m4  aclocal.m4  autogen.sh  bdist_rpm.sh  build-deb.sh  config.h.in  config.xml.in  configurator.html  (+10 more)
auxdir/: Makefile.am  Makefile.in  acx_pthread.m4  ax_check_zlib.m4  ax_gcc_builtin.m4  ax_have_epoll.m4  ax_lib_hdf5.m4  ax_pthread.m4  check.m4  gtk-2.0.m4  libtool.m4  ltmain.sh  slurm.m4  slurmrestd.m4  type_socklen_t.m4  x_ac__system_configuration.m4  x_ac_affinity.m4  x_ac_aix.m4  x_ac_asmi.m4  x_ac_bashcomp.m4  x_ac_bgl.m4  x_ac_blcr.m4  x_ac_bluegene.m4  x_ac_c99.m4  x_ac_cflags.m4  x_ac_cgroup.m4  x_ac_cray.m4  x_ac_curl.m4  x_ac_databases.m4  x_ac_debug.m4  x_ac_deprecated.m4  x_ac_dlfcn.m4  x_ac_dlopen.m4  x_ac_federation.m4  x_ac_freeipmi.m4  x_ac_gpl_licensed.m4  x_ac_gtk.m4  x_ac_hdf5.m4  x_ac_hlml.m4  x_ac_hpe_slingshot.m4  (+42 more)
branches/slurm-2.2.reconfig/: Makefile.am  NEWS  RELEASE_NOTES  configure.ac
contribs/cray/: Makefile.am  Makefile.in  capmc  capmc_resume.c  capmc_suspend.c  cnselect  etc_init_d_munge  etc_sysconfig_slurm  munge_build_script.sh  opt_modulefiles_slurm  opt_modulefiles_slurm.in  pam_job.c  plugstack.conf.template  slurm-build-script.sh  slurm.conf.template  slurmconfgen.py.in  srun.pl  srun2.pl
contribs/nss_slurm/: Makefile.am  Makefile.in  libnss_slurm.c  nss_slurm.c
contribs/pam/: Makefile.am  Makefile.in  README  pam_slurm.c
contribs/pam_slurm_adopt/: Makefile.am  Makefile.in  README  helper.c  helper.h  pam_slurm_adopt.c
contribs/phpext/: Makefile.am  Makefile.in
contribs/pmi/: Makefile.am  Makefile.in  pmi.c
contribs/pmi2/: Makefile  Makefile.am  Makefile.in  README  pmi2.h  pmi2_api.c  pmi2_util.c  pmi2_util.h  testpmi2.c  testpmi2_put.c  testpmixring.c
contribs/seff/: Makefile.am  Makefile.in  seff  smail  smail.in
contribs/sgather/: Makefile.am  Makefile.in  sgather  sgather.1
contribs/sgi/: Makefile.am  Makefile.in  README.txt  netloc_to_topology.c
contribs/slurm_completion_help/: Makefile.am  Makefile.in  README.md  slurm.vim  slurm_completion.sh
contribs/slurmdb-direct/: Makefile.am  Makefile.in  moab_2_slurmdb.pl
contribs/torque/: Makefile.am  Makefile.in  generate_pbs_nodefile.pl  mpiexec.pl  pbsnodes.pl  qalter.pl  qdel.pl  qhold.pl  qrerun.pl  qrls.pl  qstat.pl  qsub.pl
doc/: Makefile  Makefile.am  Makefile.in
doc/bgl.report/: Makefile  report.tex  splncs.bst
doc/clusterworld/: report.tex
doc/common/: acm.cls  llnlCoverPage.tex  project.bib  references.bib  slurm.eps
doc/figures/: README  allocate-init.dia  allocate-init.eps  arch.eps  comm.eps  connections.dia  connections.eps  interactive-job-init.dia  interactive-job-init.eps  launch.eps  queued-job-init.dia  queued-job-init.eps  slurm-arch.dia  slurm-arch.eps  times.gpl
doc/html/: Makefile.am  Makefile.in  README  accounting.shtml  accounting_storageplugins.shtml  acct_gather_energy_plugins.shtml  acct_gather_profile_plugins.shtml  add.shtml  admin.guide.html  api.shtml  authentication.shtml  authplugins.html  authplugins.shtml  bb_plugins.shtml  big_sys.shtml  bluegene.html  bluegene.shtml  burst_buffer.shtml  certmgr.shtml  cfp.shtml  cgroup_v2.shtml  cgroups.shtml  checkpoint_blcr.shtml  checkpoint_plugins.html  checkpoint_plugins.shtml  classic_fair_share.shtml  cli_filter_plugins.shtml  configless_slurm.shtml  configurator.easy.html.in  configurator.html  configurator.html.in  cons_res.shtml  cons_res_share.shtml  cons_tres.shtml  cons_tres_share.shtml  containers.shtml  contributor.shtml  core_spec.shtml  core_spec_plugins.shtml  cpu_management.shtml  (+170 more)
doc/jsspp/: Makefile  architecture.tex  conclusions.tex  intro.tex  jsspp.tex  references.bib  services.tex  survey.tex
doc/man/: Makefile  Makefile.am  Makefile.in  man2html.py
doc/pubdesign/: ChangeLog  LCM.arch.eps  Makefile  llnl.tex  report.tex  sample.config  summary.html
doc/sigops/: Makefile  report.tex
doc/survey/: report.tex
doc/txt/: API.for.DPCS.txt  heritage.txt  job.initiation.design.txt  job.manager.design.txt  job_data.txt  machine.status.design.txt  message.summary.txt  overlord.design.txt  partition.design.txt  slurmctld.locks  switch.manager.design.txt
etc/: MailProg.example  Makefile.am  Makefile.in  SLURM.commands  SLURM.conf1  SLURM.conf2  SLURM.jobs  bluegene.conf.example  burst_buffer.lua.example  cgroup.conf.example  cgroup.release_agent  cgroup.release_common.example  cgroup.release_common.example.in  cgroup_allowed_devices_file.conf.example  cli_filter.lua.example  init.d.slurm  init.d.slurm.in  init.d.slurmdbd  init.d.slurmdbd.in  job_submit.lua.example  layouts.d.power.conf.example  layouts.d.power_cpufreq.conf.example  layouts.d.unit.conf.example  mpich1.slurm.patch  prolog.example  ptrace.patch  sackd.service  sackd.service.in  sample.node.conf2  sample.part.conf2  slurm-ctld.conf  slurm-d.conf  slurm.commands  slurm.conf  slurm.conf.dev  slurm.conf.example  slurm.conf.ilx  slurm.conf.localhost  slurm.conf.mcr  slurm.conf1  (+10 more)
src/: Makefile.am  Makefile.in
src/accounting/: Makefile.am
src/api/: Makefile.am  Makefile.in  account_functions.c  allocate.c  allocate_msg.c  archive_functions.c  assoc_functions.c  assoc_mgr_info.c  block_info.c  bnr.c  burst_buffer_info.c  cache_info.c  cancel.c  checkpoint.c  (+65 more)
testsuite/: Makefile.am  Makefile.in  README  dejagnu.h  run-tests  testsuite.conf.sample  testsuite.conf.sample.in
trunk/: AUTHORS  BUILD.NOTES  COPYING  DISCLAIMER  META  Make-rpm.mk  Makefile.am  Makefile.in  NEWS  README  RELEASE_NOTES  RELEASE_NOTES_LLNL  SAMPLE.HEADER  Support  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configurator.html  configure  configure.ac  slurm.spec  slurm.spec.in
(+31461 files in other folders)
